<resources>
    <string name="app_name">Likas</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="title_locate">Locate</string>
    <string name="title_identify">Identify</string>
    <string name="title_update">Update</string>
    <string name="title_share">Share</string>
    <string name="identify_admit">Admit</string>
    <string name="registration">Registration</string>
    <string name="logo">Logo</string>
    <string name="create_password">Create Password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="email_address">Email Address</string>
    <string name="locate_me">Locate Me</string>
    <string name="suggest_facility">Suggest Facility</string>
    <string name="user_id">User ID</string>
    <string name="sign_out">Sign-Out</string>
    <string name="back">Back</string>
    <string name="csv_facilities">San Nicolas Fire Station~14.59720858~120.9705799~Fire~0~0\nTondo Fire Station~14.60762396~120.9665965~Fire~0~0\nGagalangin Fire Station~14.62458319~120.9729807~Fire~0~0\nTanduay Fire Station~14.59842266~120.9900622~Fire~0~0\nSta. Mesa Fire Station~14.60175338~121.0081537~Fire~0~0\nMalacañang Fire Station~14.59236621~120.9918108~Fire~0~0\nBacood Fire Station~14.59132314~121.0197651~Fire~0~0\nPaco Fire Station~14.58055205~120.9882512~Fire~0~0\nPandacan Fire Station~14.59208266~121.0118566~Fire~0~0\nSta. Ana Fire Station~14.58021943~121.0081388~Fire~0~0\nIntramuros Fire Station~14.5921778~120.9722612~Fire~0~0\nArroceros Fire Station~14.59316882~120.9818177~Fire~0~0\nSan Lazaro Fire Station~14.61294205~120.9824683~Fire~0~0\nSampaloc Fire Station~14.60772754~120.9950008~Fire~0~0\nMANILA POLICE STATION 1 - RAXABAGO~14.62099668~120.9685613~Police~0~0\nMANILA POLICE STATION 2 - MORIONES~14.60879471~120.9669201~Police~0~0\nMANILA POLICE STATION 3 - STA. CRUZ~14.60496379~120.9847136~Police~0~0\nMANILA POLICE STATION 4 - BALIK-BALIK~14.60638041~121.0023337~Police~0~0\nMANILA POLICE STATION 5 - ERMITA~14.58204708~120.9734723~Police~0~0\nMANILA POLICE STATION 6 - STA. ANA~14.5824149~121.0121532~Police~0~0\nMANILA POLICE POLICE STATION 7 - JOSE ABAD SANTOS~14.62457335~120.978181~Police~0~0\nMANILA POLICE STATION 8 - STA. MESA~14.62244791~121.0678422~Police~0~0\nMANILA POLICE STATION 9 - MALATE~14.56327742~120.9878962~Police~0~0\nMANILA POLICE STATION 10 - PANDACAN~14.59315565~121.0035682~Police~0~0\nMANILA POLICE STATION 11 - MEISIC~14.60440393~120.9732613~Police~0~0\nMetro Doctors Clinic &amp; Lying-In~14.6049~120.962697~Hospital~0~0\nMCC Childbirth &amp; Women\'s Center~14.603838~120.991563~Hospital~0~0\n"De Ocampo Memorial College, Inc."~14.60123~121.004148~Hospital~0~0\nEmilio Aguinaldo College~14.558514~120.9895~Hospital~0~0\nDE OCAMPO MEMORIAL MEDICAL CENTER~14.599856~120.999768~Hospital~0~0\n"PERPETUAL SUCCOR HOSPITAL &amp; MATERNITY, INC."~14.608156~120.992451~Hospital~0~0\n"TRINITY WOMAN &amp; CHILD CENTER ""THE BIRTHPLACE"""~14.584325~121.017477~Hospital~0~0\nCHINESE GENERAL HOSPITAL AND MEDICAL CENTER~14.625969~120.988063~Hospital~0~0\nHOSPITAL OF THE INFANT JESUS~14.614046~120.989295~Hospital~0~0\n"MARY CHILES GENERAL HOSPITAL, INC."~14.603306~120.989866~Hospital~0~0\nMEDICAL CENTER MANILA~14.582524~120.985512~Hospital~0~0\nST. JUDE HOSPITAL AND MEDICAL CENTER~14.61579~120.989038~Hospital~0~0\nUNIVERSITY OF SANTO TOMAS HOSPITAL~14.611554~120.990197~Hospital~0~0\nMETROPOLITAN MEDICAL CENTER~14.609415~120.97857~Hospital~0~0\nMANILA DOCTORS HOSPITAL~14.581922~120.98294~Hospital~0~0\nTHE MEDICAL CITY~14.58998~121.069195~Hospital~0~0\nSEAMEN\'S HOSPITAL~14.587502~120.977628~Hospital~0~0\nMARY JOHNSTON HOSPITAL~14.608999~120.966288~Hospital~0~0\nOUR LADY OF LOURDES HOSPITAL INC.~14.594864~121.022518~Hospital~0~0\nAMISOLA MATERNITY HOSPITAL~14.632861~120.978052~Hospital~0~0\n"UROLOGY CENTER OF THE PHILIPPINES, INC."~14.642036~121.053626~Hospital~0~0\nGAT ANDRES BONIFACIO MEMORIAL MEDICAL CENTER~14.600981~120.964854~Hospital~0~0\nJUSTICE JOSE ABAD SANTOS GENERAL HOSPITAL~14.597481~120.971827~Hospital~0~0\nOSPITAL NG SAMPALOC~14.60764~120.996736~Hospital~0~0\nOSPITAL NG TONDO~14.625981~120.97825~Hospital~0~0\nJOSE R. REYES MEMORIAL MEDICAL CENTER~14.614269~120.981958~Hospital~0~0\nOSPITAL NG MAYNILA MEDICAL CENTER~14.563877~120.986437~Hospital~0~0\nTONDO MEDICAL CENTER~14.634821~120.963115~Hospital~0~0\nDR. JOSE FABELLA MEMORIAL HOSPITAL~14.606445~120.983908~Hospital~0~0\nSAN LAZARO HOSPITAL~14.613786~120.980973~Hospital~0~0\n</string>
    <string name="nearest_facility">Nearest Facility</string>
    <string-array name="facility_types">
        <item>All Facilities</item>
        <item>Evacuation Centers</item>
        <item>Medical Facilities</item>
        <item>Fire Stations</item>
        <item>Police Stations</item>
    </string-array>
</resources>